Rewrite path ancestor calculation based on ideas from  Florian Lacreuse
Co-Authored-By: Florian Lacreuse <florianlacreuse@users.noreply.github.com>